Translation and colors, info

--- a/app/Resources/views/includes/social.html.twig
+++ b/app/Resources/views/includes/social.html.twig
@@ -22,3 +22,105 @@
       <div class="social social_mail"></div>
     </a>
 </div>
+
+
+
+
+
+<!-- Modals for "more info" -->
+<!-- 1. Choice -->
+<div class="modal bs-example-modal-lg fade" id="choiceModal" tabindex="-1" role="dialog" aria-labelledby="choiceModalLabel" aria-hidden="true" data-backdrop="static" data-keyboard="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h2 class="modal-title center" id="choiceModalLabel">
+          {{ 'main.titles.variatyOfChoice' | trans }}
+        </h2>
+      </div>
+      <div class="modal-body">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, iste quidem! Doloremque ut non, sequi provident nostrum distinctio, blanditiis ducimus beatae ea voluptas, esse recusandae quam similique facilis aperiam itaque?
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, distinctio, nobis? Facilis suscipit sunt obcaecati non aspernatur blanditiis perferendis, ex earum? Soluta ut odio cupiditate, praesentium impedit sed nulla atque.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius fugiat necessitatibus alias, hic natus facilis dolore sapiente, sint omnis nostrum. Possimus, nam omnis, perspiciatis assumenda suscipit corporis. Facilis, laudantium, quo!
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio enim asperiores totam quaerat quisquam magni a minima explicabo quod aspernatur iure deserunt, nisi eaque, reiciendis consequuntur quasi laudantium atque voluptas.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis quae nisi, temporibus similique ea. Debitis consequuntur excepturi beatae. Autem porro quas consectetur ipsa. Nulla, impedit esse possimus porro. Veritatis, non.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, odio, necessitatibus esse impedit voluptatibus iusto id doloremque accusantium. Sequi dolor, vero. Rem eligendi odio, nobis harum beatae vitae facilis! Repudiandae.
+      </div>
+      <div class="modal-footer padding0">
+        <button type="button" class="btn btn-modal" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- 2. Quality -->
+<div class="modal bs-example-modal-lg fade" id="qualityModal" tabindex="-1" role="dialog" aria-labelledby="qualityModalLabel" aria-hidden="true" data-backdrop="static" data-keyboard="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h2 class="modal-title center" id="qualityModalLabel">
+          {{ 'main.titles.qualityProduct' | trans }}
+        </h2>
+      </div>
+      <div class="modal-body">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, iste quidem! Doloremque ut non, sequi provident nostrum distinctio, blanditiis ducimus beatae ea voluptas, esse recusandae quam similique facilis aperiam itaque?
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, distinctio, nobis? Facilis suscipit sunt obcaecati non aspernatur blanditiis perferendis, ex earum? Soluta ut odio cupiditate, praesentium impedit sed nulla atque.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius fugiat necessitatibus alias, hic natus facilis dolore sapiente, sint omnis nostrum. Possimus, nam omnis, perspiciatis assumenda suscipit corporis. Facilis, laudantium, quo!
+        <ol>
+          <li>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi, est! Totam repudiandae accusamus fugiat vel culpa libero consequuntur commodi dicta magni aut aspernatur adipisci, error tempore dolorem, minima cumque quaerat.
+          </li>
+          <li>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore explicabo molestiae magni error in temporibus maxime, esse autem, at pariatur quidem officiis tenetur molestias numquam nemo quod tempora reprehenderit provident!
+          </li>
+          <li>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga nostrum est, ipsam reiciendis? Minima amet vitae accusamus id doloremque, eius corporis odit dolorum doloribus, nesciunt corrupti. Voluptatum, et sapiente numquam.
+          </li>
+        </ol>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio enim asperiores totam quaerat quisquam magni a minima explicabo quod aspernatur iure deserunt, nisi eaque, reiciendis consequuntur quasi laudantium atque voluptas.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis quae nisi, temporibus similique ea. Debitis consequuntur excepturi beatae. Autem porro quas consectetur ipsa. Nulla, impedit esse possimus porro. Veritatis, non.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, odio, necessitatibus esse impedit voluptatibus iusto id doloremque accusantium. Sequi dolor, vero. Rem eligendi odio, nobis harum beatae vitae facilis! Repudiandae.
+      </div>
+      <div class="modal-footer padding0">
+        <button type="button" class="btn btn-modal" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- 3. Security -->
+<div class="modal bs-example-modal-lg fade" id="securityModal" tabindex="-1" role="dialog" aria-labelledby="securityModalLabel" aria-hidden="true" data-backdrop="static" data-keyboard="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h2 class="modal-title center" id="securityModalLabel">
+          {{ 'main.titles.securedPayment' | trans }}
+        </h2>
+      </div>
+      <div class="modal-body">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, iste quidem! Doloremque ut non, sequi provident nostrum distinctio, blanditiis ducimus beatae ea voluptas, esse recusandae quam similique facilis aperiam itaque?
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, distinctio, nobis? Facilis suscipit sunt obcaecati non aspernatur blanditiis perferendis, ex earum? Soluta ut odio cupiditate, praesentium impedit sed nulla atque.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius fugiat necessitatibus alias, hic natus facilis dolore sapiente, sint omnis nostrum. Possimus, nam omnis, perspiciatis assumenda suscipit corporis. Facilis, laudantium, quo!
+        <ol>
+          <li>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi, est! Totam repudiandae accusamus fugiat vel culpa libero consequuntur commodi dicta magni aut aspernatur adipisci, error tempore dolorem, minima cumque quaerat.
+          </li>
+          <li>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore explicabo molestiae magni error in temporibus maxime, esse autem, at pariatur quidem officiis tenetur molestias numquam nemo quod tempora reprehenderit provident!
+          </li>
+          <li>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga nostrum est, ipsam reiciendis? Minima amet vitae accusamus id doloremque, eius corporis odit dolorum doloribus, nesciunt corrupti. Voluptatum, et sapiente numquam.
+          </li>
+        </ol>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio enim asperiores totam quaerat quisquam magni a minima explicabo quod aspernatur iure deserunt, nisi eaque, reiciendis consequuntur quasi laudantium atque voluptas.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis quae nisi, temporibus similique ea. Debitis consequuntur excepturi beatae. Autem porro quas consectetur ipsa. Nulla, impedit esse possimus porro. Veritatis, non.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, odio, necessitatibus esse impedit voluptatibus iusto id doloremque accusantium. Sequi dolor, vero. Rem eligendi odio, nobis harum beatae vitae facilis! Repudiandae.
+      </div>
+      <div class="modal-footer padding0">
+        <button type="button" class="btn btn-modal" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
