--- a/web/css/main_style.css
+++ b/web/css/main_style.css
@@ -43,13 +43,16 @@ body
 .margin_top_30 {
 	margin-top: 30px;
 }
-
+.padding0 {
+	padding: 0;
+}
 img {
 	width: 100%;
 }
 
 h1
 {
+	margin-bottom: 0 !important;
 	margin-top: 0 !important;
 	text-align: center;
 	font-family: 'espacio';
@@ -201,6 +204,9 @@ hr {
 .italic {
 	font-style: italic;
 }
+.uppercase {
+	text-transform : uppercase;
+}
 
 ul {
 	list-style-type: circle;
@@ -239,6 +245,8 @@ a:hover {
 }
 .btn:focus {
 	color: inherit;
+	text-decoration: none;
+	box-shadow: none;
 }
 p {	
 	margin: 5px 10px 5px 10px;
@@ -305,13 +313,15 @@ strong {
 #header {
 	position: fixed;
 	top: 0px;
-	padding-top: 7px;
 	z-index: 1;
 	background-color: rgba(0,0,0,0.88); /*#222121*/
 	border-bottom: 1px solid rgba(250,250,250,0.6);
 	box-shadow: 0px 1px 3px 2px rgba(50,50,50,0.8);
 
 	text-transform : uppercase;
+
+	padding-top: 7px;
+	padding-bottom: 3px !important;
 }
 
 #menu li {
@@ -359,6 +369,8 @@ strong {
 .btn-log, .btn-log:focus {
 	margin-left: 5px;
 	margin-right: 5px;
+	margin-top: 0;
+	margin-bottom: 0;
 	background-color: transparent;
 	/*border: 1px solid white;*/
 	border-radius: 0;
@@ -587,7 +599,7 @@ strong {
 .logo_welcome_img {
 	width: 100%;
 	border-radius: 58%;
-	box-shadow: 0px 0px 40px 60px rgba(250,250,250,0.3);
+	/*box-shadow: 0px 0px 40px 60px rgba(250,250,250,0.3);*/
 }
 
 .presentation_photos {
@@ -704,9 +716,59 @@ a.captionOrange:hover
 	width: 90%;
 }
 
-
-.info_panel_details {
-	width: 300px;
+.read-more {
+	border-bottom: 2px solid transparent;
+}
+.read-more:hover {
+	border-bottom: 2px solid white;
+}
+.modal-content {
+	padding: 0px !important;
+}
+.modal-dialog {
+	/*background-color: black;*/
+	background-color: rgba(120,30,20,0.99) ;
+	/*background-image: url('../img/system/defaults/background_default_medium.png');*/
+	border: 1px solid white;
+	border-radius: 0;
+	color: white; /*black;*/
+}
+.modal-header, .modal-footer {
+	background-color: rgba(0,0,0,0.88);
+}
+.modal-content, .modal-body {
+	background-color: transparent;
+}
+.modal-footer {
+	padding: 5px !important;
+}
+/*.modal-backdrop {
+  z-index: -1;
+}*/
+/*.modal_price {
+	color: #541009;
+	font-weight: 900;
+	font-size: 1.2em;
+	background-color: rgba(120,30,20,0.7);
+	padding: 5px;
+	padding-right: 2px;
+	border: 1px solid white;
+	margin: 10px;
+	min-height: 30px;
+}*/
+.btn-modal {
+	margin-top: 10px;
+	margin-left: 10px;
+	margin-right: 10px;
+	font-size : 1.1em;
+	background-color: transparent;
+	/*border: 1px solid white;*/
+	border-radius: 0;
+	border: 0.5px solid white;
+}
+.btn-modal:hover, .btn-modal-active {
+	background-color: rgba(250,250,250,0.4);
+	color: white;
 }
 
 
@@ -897,50 +959,6 @@ a.captionOrange:hover
 }
 .web_conditions_box {
 	margin-left: 20%;
-}
-.modal-content {
-	padding: 0px !important;
-}
-.modal-dialog {
-	/*background-color: black;*/
-	background-color: #541009 ;
-	border: 1px solid white;
-	border-radius: 0;
-	color: white;
-}
-.modal-content, .modal-header, .modal-body, .modal-footer {
-	background-color: transparent;
-}
-.modal-footer {
-	padding-top: 5px;
-}
-.modal-backdrop {
-  z-index: -1;
-}
-.modal_price {
-	color: #541009;
-	font-weight: 900;
-	font-size: 1.2em;
-	background-color: rgba(250,250,250,0.8);
-	padding: 5px;
-	padding-right: 2px;
-	border: 1px solid white;
-	margin: 10px;
-	min-height: 30px;
-}
-.btn-modal {
-	margin-top: 10px;
-	margin-left: 10px;
-	margin-right: 10px;
-	font-size : 1.1em;
-	background-color: transparent;
-	/*border: 1px solid white;*/
-	border-radius: 0;
-	border: 0.5px solid white;
-}
-.btn-modal:hover, .btn-modal-active {
-	background-color: rgba(250,250,250,0.4);
-	color: white;
 }
 
 .add_buttons_cart {
