--- a/src/LBF/AdminBundle/Resources/views/Admin/indexAdmin.html.twig
+++ b/src/LBF/AdminBundle/Resources/views/Admin/indexAdmin.html.twig
@@ -6,7 +6,7 @@
   {{ parent() }} - {{ 'user.titles.profile' | trans }}
 {% endblock %}
 
-{% block LBF_User_body %}
+{% block LBF_Admin_body %}
 
 	<!-- BEGIN CONTENT -->
 	<div id="page_content" class="row">
@@ -52,4 +52,4 @@
       {% include 'includes/footer.html.twig' %}
     <!-- END rightbar -->
 
-{% endblock LBF_User_body %}
+{% endblock LBF_Admin_body %}
