--- a/src/LBF/MainBundle/Resources/views/Main/order.html.twig
+++ b/src/LBF/MainBundle/Resources/views/Main/order.html.twig
@@ -103,12 +103,17 @@
 				        				The managers have to validate it for your order to get confirmed.
 				        			</li>
 				        			<li>
-				        				Once the order is confirmed and ready, you will have to come and collect your order at the following address: <br/>
-				        				<strong>
-					        				C-19, Calle de los Orquideas <br/>
-				        					08056 Cusco <br/>
-				        					Peru
-				        				</strong>
+				        				Once the order is confirmed and ready, you will have to come and collect your order at the following address: 
+				        				<br/><br/>
+				        				<div class="address_box">
+					        				<strong>
+					        					<strong>Le Buffet Francés</strong> <br/>
+						        				Avenida Las Sauces <br/>
+						        				Larapa <br/>
+					        					San Sebastian - Cusco <br/>
+					        					Perú
+					        				</strong>
+				        				</div>
 				        			</li>
 				        		</ol>
 		                    </div>
