--- a/src/LBF/MainBundle/Resources/views/Main/indexMain.html.twig
+++ b/src/LBF/MainBundle/Resources/views/Main/indexMain.html.twig
@@ -270,7 +270,7 @@
 								//     setTimeout(function() {
 								//     	$('.alert').fadeOut('fast');
 								//     	document.getElementById("sessionFlash").style.display = "none";
-								//     },4000);
+								//     },5000);
 								// }
 
 								return false;
@@ -352,7 +352,7 @@
 									//     setTimeout(function() {
 									//     	$('.alert').fadeOut('fast');
 									//     	document.getElementById("sessionFlash").style.display = "none";
-									//     },4000);
+									//     },5000);
 									// }
 
 						            // To write the cart:
@@ -373,13 +373,13 @@
 									// Flash message
 									document.getElementById("sessionFlash").style.display = "block";
 									document.getElementById("sessionFlash").innerHTML = '\
-									<div class="alert alert-success alert-dismissible fade in" role="alert">\
+									<div class="alert alert-success alert-dismissible fade in center" role="alert">\
 								      <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>\
 								      <strong>\
-								      	{{ 'alert.title.congratulations' | trans }}\
-								      </strong>\ 
-								      {{ 'alert.content.congratulations' | trans }}\
-								      <button  type="button" data-toggle="modal" data-target="#cartModal" id="button_cart_a"  class="no_style_button">\
+								      	{{ "alert.title.congratulations" | trans }}\
+								      </strong>\
+								      {{ "alert.content.congratulations" | trans }}\
+								      <button class="no_style_button" onClick="addToSessionCart()">\
 								      	<a><strong>\
 								      		{{ "header.titles.myCart" | trans }}\
 								      	</strong></a>\
@@ -388,7 +388,7 @@
 								    setTimeout(function() {
 								    	$('.alert').fadeOut('fast');
 								    	document.getElementById("sessionFlash").style.display = "none";
-								    },4000);
+								    },5000);
 								    
 								}
 								else {
